# gpt-demo

./: .env.example  pyproject.toml
src/gpt_demo/: app.py  main.py
src/gpt_demo/api/: chat.py
